--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "n8n-nodes-aws-bedrock-assumerole",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "n8n node for AWS Bedrock with AssumeRole authentication",
   "keywords": [
     "n8n-community-node-package",
@@ -24,13 +24,13 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc && npm run copy-icons",
-    "copy-icons": "cp -r icons dist/",
+    "copy-icons": "cp icons/bedrock.svg dist/nodes/ && cp icons/aws.svg dist/credentials/",
     "dev": "tsc --watch",
     "format": "prettier --write .",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest",
-    "prepublishOnly": "npm run build && npm run lint"
+    "prepublishOnly": "npm run build"
   },
   "files": [
     "dist",
