--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "test": "jest",
+    "test:integration": "jest __tests__/integration",
     "prepublishOnly": "npm run build"
   },
   "files": [
@@ -51,6 +52,7 @@
     "@types/node": "^18.15.0",
     "@typescript-eslint/eslint-plugin": "^5.57.0",
     "@typescript-eslint/parser": "^5.57.0",
+    "dotenv": "^17.2.3",
     "eslint": "^8.37.0",
     "eslint-plugin-n8n-nodes-base": "^1.11.0",
     "jest": "^29.5.0",
@@ -59,9 +61,9 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "@aws-sdk/client-sts": "^3.0.0",
     "@aws-sdk/client-bedrock-runtime": "^3.0.0",
-    "n8n-workflow": "^1.0.0"
+    "@aws-sdk/client-sts": "^3.0.0",
+    "n8n-workflow": "*"
   },
   "peerDependencies": {
     "n8n-workflow": "*"
