test: read inference profile model ids from env

--- a/.env.test.example
+++ b/.env.test.example
@@ -11,3 +11,8 @@ AWS_ROLE_ARN=arn:aws:iam::123456789012:role/your-bedrock-role
 # AWS Region
 AWS_REGION=us-east-1
 
+# Optional: model identifiers for inference profile tests
+#BEDROCK_TEST_MODEL_ID_SONNET_V2=arn:aws:bedrock:us-east-1:123456789012:application-inference-profile/your-sonnet-v2-profile-id
+#BEDROCK_TEST_MODEL_ID_HAIKU=arn:aws:bedrock:us-east-1:123456789012:application-inference-profile/your-haiku-profile-id
+
+
