feat: add AWS Bedrock Chat Model sub-node for AI Agent compatibility
- Add new AwsBedrockChatModel node implementing LangChain BaseChatModel
- Enable AI Agent integration with full tool calling support
- Implement bindTools method for tool calling functionality
- Add support for ToolMessage and tool_calls in message conversion
- Convert LangChain tool schemas to Claude's tool format
- Parse tool_use and tool_result blocks from Claude responses
- Add dynamic model options loading from Application Inference Profiles
- Respect applicationInferenceProfilesJson configuration from credentials
- Add @langchain/core dependency (^0.3.0) for LangChain compatibility
- Register new node in package.json alongside existing standalone node
- Update README with comprehensive Chat Model documentation
- Add usage examples and comparison table between Chat Model and standalone node
- Maintain backward compatibility with existing AWS Bedrock (AssumeRole) node

The Chat Model sub-node enables users to leverage AWS Bedrock Claude models
within n8n's AI Agent workflows, supporting advanced features like tool calling,
conversation memory, multi-step reasoning, and structured outputs while using
AssumeRole authentication for cross-account access.

BREAKING CHANGE: None - this is a new feature addition

--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
       "dist/credentials/AwsAssumeRole.credentials.js"
     ],
     "nodes": [
-      "dist/nodes/AwsBedrockAssumeRole.node.js"
+      "dist/nodes/AwsBedrockAssumeRole.node.js",
+      "dist/nodes/AwsBedrockChatModel.node.js"
     ]
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.0.0",
     "@aws-sdk/client-sts": "^3.0.0",
+    "@langchain/core": "^0.3.0",
     "n8n-workflow": "*"
   },
   "peerDependencies": {
